Added my own mario class to figure things out